--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 before_install:
 - openssl aes-256-cbc -K $encrypted_4b6fcb2d521e_key -iv $encrypted_4b6fcb2d521e_iv
   -in test.txt.enc -out test.txt -d
+  - cat test.txt
