--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_4b6fcb2d521e_key -iv $encrypted_4b6fcb2d521e_iv
   -in test.txt.enc -out test1.txt -d
 
-- cat test1.txt
+- echo $(cat test1.txt)
